apps/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
  labels:
    app: plex
    app.kubernetes.io/name: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
        app.kubernetes.io/name: plex
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: homelab.io/downloads-local
                operator: In
                values:
                - "true"
      containers:
      - name: plex
        image: plexinc/pms-docker:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 32400
          name: webui
        volumeMounts:
        - name: plex-config
          mountPath: /config
        - name: media
          mountPath: /media/movies
          subPath: movies
        - name: media
          mountPath: /media/tv
          subPath: tv
        - name: media
          mountPath: /media/sports
          subPath: sports
        resources:
          requests:
            cpu: 250m
            memory: 768Mi
          limits:
            cpu: 2000m
            memory: 4Gi
        livenessProbe:
          httpGet:
            path: /web
            port: 32400
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /web
            port: 32400
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: plex-config
        persistentVolumeClaim:
          claimName: plex-config-laptop
      - name: media
        persistentVolumeClaim:
          claimName: media
