apps/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Plex"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "plex.png"
    gethomepage.dev/description: "Media server"
    gethomepage.dev/href: "https://plex.home.arpa/"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - plex.home.arpa
      secretName: homelab-wildcard-tls
  rules:
  - host: plex.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex
            port:
              number: 32400
